RESOLVED FIXED130705
[WK2] SpinLock are not initialized by default, ViewUpdateDispatcher is missing an initializer
https://bugs.webkit.org/show_bug.cgi?id=130705
Summary [WK2] SpinLock are not initialized by default, ViewUpdateDispatcher is missin...
Benjamin Poulain
Reported 2014-03-24 17:47:44 PDT
[WK2] SpinLock are not initialized by default, ViewUpdateDispatcher is missing an initializer
Attachments
Patch (1.39 KB, patch)
2014-03-24 17:47 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-03-24 17:47:57 PDT
Benjamin Poulain
Comment 2 2014-03-24 17:54:50 PDT
Comment on attachment 227710 [details] Patch Clearing flags on attachment: 227710 Committed r166213: <http://trac.webkit.org/changeset/166213>
Benjamin Poulain
Comment 3 2014-03-24 17:54:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.