[WK2] SpinLock are not initialized by default, ViewUpdateDispatcher is missing an initializer https://bugs.webkit.org/show_bug.cgi?id=130705

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-03-24
Reviewed by Simon Fraser.

* WebProcess/WebPage/ViewUpdateDispatcher.cpp:
(WebKit::ViewUpdateDispatcher::ViewUpdateDispatcher):


Canonical link: https://commits.webkit.org/148741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166213 268f45cc-cd09-0410-ab3c-d52691b4dbfc